--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,6 +35,13 @@ body {
     margin: 0 auto;
 }
 
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 100px;
+}
+
 .btn {
     display: flex;
     justify-content: center;
