--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
     <div class="bg-text">
       <h1 class="text-center">Test assignment for front-end developer</h1>
       <p class="text-center">What defines a good front-end developer is one that has skilled knowledge of HTML, CSS, JS with a vast understanding of User design thinking as they'll be building web interfaces with accessibility in mind. They should also be excited to learn, as the world of Front-End Development keeps evolving.</p>
-      <a href="" class="btn">Sign Up</a>
+      <a href="#sign-up" class="btn">Sign Up</a>
     </div>
   </div>
   <section id="users">
