--- a/src/app/form-section/form-section.component.scss
+++ b/src/app/form-section/form-section.component.scss
@@ -57,7 +57,8 @@ form {
     .file {
         .file-custom {
             display: flex;
-            width: 380px;
+            max-width: 380px;
+            width: 100%;
             height: 54px;
             border-radius: 4px;
             color: #000000;
