regexp added small changes, has an error 500

--- a/src/app/form-section/form-section.component.html
+++ b/src/app/form-section/form-section.component.html
@@ -18,19 +18,19 @@
     <div class="radio-btn">
         <h3>Select your position</h3>
         <div class="flex">
-            <input id="radio1" class="radio" type="radio" name="position" value="Frontend developer" formControlName="position">
+            <input id="radio1" class="radio" type="radio" name="position_id" [value]="1" formControlName="position_id">
             <label for="radio1">Frontend developer</label>
         </div>
         <div class="flex">
-            <input id="radio2" class="radio" type="radio" name="position" value="Backend developer" formControlName="position">
+            <input id="radio2" class="radio" type="radio" name="position_id" [value]="2" formControlName="position_id">
             <label for="radio2">Backend developer</label>
         </div>
         <div class="flex">
-            <input id="radio3" class="radio" type="radio" name="position" value="Designer" formControlName="position">
+            <input id="radio3" class="radio" type="radio" name="position_id" [value]="3" formControlName="position_id">
             <label for="radio3">Designer</label>
         </div>
         <div class="flex">
-            <input id="radio4" class="radio" type="radio" name="position" value="QA" formControlName="position">
+            <input id="radio4" class="radio" type="radio" name="position_id" [value]="4" formControlName="position_id">
             <label for="radio4">QA</label>
         </div>
     </div>
