--- a/src/app/user-section/user-section.component.html
+++ b/src/app/user-section/user-section.component.html
@@ -2,9 +2,9 @@
 <div class="cards-box">
     <div class="card" *ngFor="let user of users">
         <img [src]="user.photo" alt="Photo" onerror="this.src='./assets/img.png'">
-        <p>{{user.name}}</p>
+        <p [title]="user.name">{{user.name}}</p>
         <p>{{user.position}}</p>
-        <p [attr.data-text]="user.email">{{user.email}}</p>
+        <p [title]="user.email">{{user.email}}</p>
         <p>{{user.phone | phone}}</p>
     </div>
     <div class="dummy"></div>
