--- a/src/app/form-section/form-section.component.scss
+++ b/src/app/form-section/form-section.component.scss
@@ -88,8 +88,13 @@ form {
                 }
             }
             span {
+                cursor: default;
                 margin-left: 16px;
+                margin-right: 16px;
                 width: 100%;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
             }
 
         }
