--- a/src/app/user-section/user-section.component.html
+++ b/src/app/user-section/user-section.component.html
@@ -14,4 +14,5 @@
 <div class="center">
     <img class="loader" src="./assets/Preloader.png" alt="Loader" *ngIf="(loadingHandler.isLoading$ | async) === true">
 </div>
+<div class="in-box" *ngIf="isEnd"></div>
 
