--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -35,6 +35,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 140px;
 
     .bg-text {
         display: flex;
@@ -53,5 +54,15 @@ header {
             line-height: 26px;
         }
     }
-    margin-bottom: 140px;
+}
+@media screen and (max-width: 600px) {
+    #sign-up {
+        width: calc(100% - 40px);
+        margin: 0 auto;
+    }
+
+    #users {
+        width: calc(100% - 40px);
+        margin: 0 auto;
+    }
 }
